mutants.out.old/log/src__proto__single__cmd.rs_line_109_col_9.log

*** src/proto/single/cmd.rs:109:9: replace Fail::generic -> Self with Default::default()

*** mutation diff:
--- src/proto/single/cmd.rs
+++ replace Fail::generic -> Self with Default::default()
@@ -101,17 +101,17 @@
             backtrace: Vec::new(),
         }
     }
 
     // Used for all kind of errors not related to domain logic, e.g. missing handler for this type of job (i.e.
     // the worker consumed a job from a specified queue, but has no tool to process it).
     // Note that "unknown" is the error type used by the Go library in such cases too.
     pub(crate) fn generic<S: Into<String>>(job_id: JobId, message: S) -> Self {
-        Fail::new(job_id, "unknown", message)
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     pub(crate) fn set_backtrace(&mut self, lines: Vec<String>) {
         self.backtrace = lines;
     }
 
     // For any application errors (all kind of errors that could happen in userland when handling the job)
     // we want to send backtrace (split into lines) to the Faktory server so that whoever is interested in


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `single::cmd::Fail: Default` is not satisfied
   --> src/proto/single/cmd.rs:109:9
    |
109 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `single::cmd::Fail`
    |
help: consider annotating `single::cmd::Fail` with `#[derive(Default)]`
    |
85  + #[derive(Default)]
86  | pub(crate) struct Fail {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
